# portfolio-tracker-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  env.template  pyproject.toml  pytest.ini  requirements.txt
docs/: api-reference.md  database-schema.md  deployment.md  getting-started.md
examples/: basic_usage.py
migrations/: env.py
scripts/: init-db.sql
src/: __init__.py
src/portfolio_tracker/: __init__.py  main.py
src/portfolio_tracker/api/: __init__.py
src/portfolio_tracker/api/v1/: dependencies.py
src/portfolio_tracker/config/: __init__.py  database.py  logging.py  settings.py
src/portfolio_tracker/models/: __init__.py
src/portfolio_tracker/models/db/: __init__.py  base.py  holding.py  market_price.py  portfolio.py  transaction.py  user.py
src/portfolio_tracker/models/domain/: __init__.py
src/portfolio_tracker/repositories/: __init__.py
src/portfolio_tracker/utils/: __init__.py  exceptions.py  helpers.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  factories.py  sample_data.json
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_main.py  test_utils.py
tools/deployment/: __init__.py
tools/migration/: __init__.py  migration_runner.py
tools/setup/: __init__.py  initial_setup.py  verify_structure.py
